resources/css/coffee-menu-styles.css
/* Universal Style */

html {
  font-size: 16px;
}

body {
  background: linear-gradient(135deg,#E5E5E5, #BCC6CC, #A0A8B0);
  color: #333;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Playfair Display';
}

p {
  font-family: 'Open Sans';
  display: inline-block;
  margin: 5px 0;
}

hr {
  border: 5px solid white;
}

/* Menu */

#menu {
  background-color: #333;
  width: 90%;
  max-width: 750px;
  margin: 0 auto;
}

#content {
  padding: 10px;
}

#menu-header {
  color: white;
  text-align: center;
  margin: 0 auto;
}

#logo {
  width: 100%;
  max-width: 200px;
  margin-top: -30px;
}

/* Content */

.menu-content {
  background-color: #e0e0e0;
}

.content-header {
  font-size: 2rem;
  text-align: center;
}

.drink, .price {
  font-size: 1.25rem;
}

.drink {
  text-align: left;
  padding-left: 10px;
  width: 89%;
}

.price {
  text-align: right;
  padding-right: 10px;
}

/* Footer */

#info {
  background-color: black;
  color: #e5e5e5;
}

/* Images Gallery */

#products-header {
  text-align: center;
  font-size: 2rem;
}

#images-gallery {
  width: 90%;
  max-width: 1000px;
  background-color: #333;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
}

.image-container {
  text-align: center;
  width: 33%;
}

.image {
  padding-top: 10%;
  width: 70%;
}

.image-caption {
  color: white;
  display: block;
}

.honey, .honey-caption {
  display: none;
}

/* Media queries */

@media only screen and (max-width: 500px) {
  html {
    font-size: 12px;
  }
  #menu {
    width: 90%;
  }
  .drink {
    width: 84%;
  }
  #logo {
    width: 45%;
  }
  #images-gallery {
    width: 90%;
    max-width: 500px;
  }
  .image-container {
    width: 50%;
  }
  .image {
    width: 90%;
  }
  .honey {
    display: inline;
  }
  .honey-caption {
    display: block;
  }
}

@media only screen and (min-width: 501px) and (max-width: 1024px) {
  html{
    font-size: 13px;
  }
  #menu {
    width: 90%;
  }
  .drink {
    width: 83%;
  }
}

